--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -1,1 +1,15 @@
-Any User can make at any time
+<a href="/listings">Back to Listings</a>
+<br><br><br>
+<h1>New Listing</h1>
+<br>
+<form method="post" action="/listings">
+<label>Title</label>
+<br>
+<input type="text" name="title"/>
+<br><br>
+<label>Description</label>
+<br>
+<textarea type="text" name="description" rows="4" cols="50"></textarea>
+<br><br>
+<input type="submit" value="Post Listing">
+</form>
