--- a/app/views/bids/index.erb
+++ b/app/views/bids/index.erb
@@ -1,4 +1,4 @@
-Show all that belong to User who made bids (with Listing names)
-    or from User who owns parent Listing (with Usernames)
+<!--Show all that belong to User who made bids (with Listing names)
+   or from User who owns parent Listing (with Usernames)
 
-newest to oldest
+newest to oldest -->
