--- a/app/views/listings/edit.erb
+++ b/app/views/listings/edit.erb
@@ -1,1 +1,17 @@
-Edit made by User
+<a href="/listings">Back to Listings</a>
+<br><br><br>
+<h1>Update: <%= @listing.title %></h1>
+<br>
+<form method="post" action="/listings/<%= @listing.id %>">
+<input id="hidden" type="hidden" name="_method" value="patch">
+<label>Title</label>
+<br>
+<input type="text" name="title" value="<%= @listing.title %>"/>
+<br><br>
+<label>Description</label>
+<br>
+<textarea type="text" name="description" rows="4" cols="50"><%= @listing.description %></textarea>
+<br><br>
+<input type="submit" value="Update Listing">
+
+</form>
