added views and routing for bids

--- a/app/views/bids/edit.erb
+++ b/app/views/bids/edit.erb
@@ -1,1 +1,18 @@
 <!-- Edit made by User -->
+<h1></h1>
+
+<a href="/bids/<%= @bid.id %>">Back to Bid</a>
+<br><br><br>
+<h1>Update: <%= @bid.listing.title %></h1>
+<br>
+<form method="post" action="/bids/<%= @bid.id %>">
+<input type="hidden" name="_method" value="patch">
+<label>Amount $</label>
+<input type="integer" name="amount" value="<%= @bid.amount %>"/>
+<br><br>
+<label>Message to poster:</label>
+<br>
+<textarea type="text" name="message" rows="4" cols="50"><%= @bid.message %></textarea>
+<br><br>
+<input type="submit" value="Update Bid">
+</form>
