--- a/app/views/bids/index.erb
+++ b/app/views/bids/index.erb
@@ -2,3 +2,12 @@
    or from User who owns parent Listing (with Usernames)
 
 newest to oldest -->
+<a href="/listings/<%= @listing.id %>">Back to Listing</a>
+<br><br>
+<h1>Bids for: <%= @listing.title %></h1>
+<br>
+<% @bids.each do |bid| %>
+   <%= bid.listing.title %> - $<%= bid.amount %>
+   <a href="/bids/<%= bid.id %>"><button>View Bid</button></a>
+   <br><br>
+<% end %>
