--- a/app/views/listings/show.erb
+++ b/app/views/listings/show.erb
@@ -5,7 +5,11 @@
 <br><br><br>
 <p><%= @listing.description %></p>
 <br>
-<a href="/listings/<%= @listing.id %>/edit">Edit</a>
+<a href="/bids/new/<%= @listing.id %>"><button>Place a Bid</button></a>
+<br>
+<a href="/listings/<%= @listing.id %>/bids"><button>View all Bids for this Listing</button></a>
+<br><br>
+<a href="/listings/<%= @listing.id %>/edit"><button>Edit</button></a>
 <form method="post" action="/listings/<%= @listing.id %>">
 <input id="hidden" type="hidden" name="_method" value="delete">
 <br>
