--- a/app/views/listings/show.erb
+++ b/app/views/listings/show.erb
@@ -1,12 +1,11 @@
 <a href="/listings">Back to Listings</a>
 <br><br><br>
 <h2><%= @listing.title %></h2>
-<small>Posted by: </small>
+<small>Posted by: <%= @listing.user.username %></small>
 <br><br><br>
 <p><%= @listing.description %></p>
 <br>
-<a href="/bids/new/<%= @listing.id %>"><button>Place a Bid</button></a>
-<br>
+<% if current_user.id == @listing.user_id %>
 <a href="/listings/<%= @listing.id %>/bids"><button>View all Bids for this Listing</button></a>
 <br><br>
 <a href="/listings/<%= @listing.id %>/edit"><button>Edit</button></a>
@@ -14,4 +13,7 @@
 <input id="hidden" type="hidden" name="_method" value="delete">
 <br>
 <input type="submit" value="Delete">
+<% else %>
+<a href="/bids/new/<%= @listing.id %>"><button>Place a Bid</button></a>
+<%  end %>
 </form>
