--- a/app/views/bids/edit.erb
+++ b/app/views/bids/edit.erb
@@ -1,8 +1,8 @@
-<!-- Edit made by User -->
 <h1></h1>
 
 <a href="/bids/<%= @bid.id %>">Back to Bid</a>
 <br><br><br>
+<% if current_user.id == @bid.user_id %>
 <h1>Update: <%= @bid.listing.title %></h1>
 <br>
 <form method="post" action="/bids/<%= @bid.id %>">
@@ -16,3 +16,4 @@
 <br><br>
 <input type="submit" value="Update Bid">
 </form>
+<% end %>
