created checks for unique login attributes

--- a/app/views/bids/index_listing.erb
+++ b/app/views/bids/index_listing.erb
@@ -1,9 +1,11 @@
-<a href="/listings/<%= @listing.id %>">Back to Listing</a>
-<br><br>
-<h1>Bids for: <%= @listing.title %></h1>
-<br>
-<% @bids.each do |bid| %>
-   <%= bid.listing.title %> - $<%= bid.amount %>
-   <a href="/bids/<%= bid.id %>"><button>View Bid</button></a>
+<% if current_user.id == @listing.user_id %>
+   <a href="/listings/<%= @listing.id %>">Back to Listing</a>
    <br><br>
+   <h1>Bids for: <%= @listing.title %></h1>
+   <br>
+   <% @bids.each do |bid| %>
+      <%= bid.listing.title %> - $<%= bid.amount %>
+      <a href="/bids/<%= bid.id %>"><button>View Bid</button></a>
+      <br><br>
+   <% end %>
 <% end %>
