--- a/app/views/bids/show.erb
+++ b/app/views/bids/show.erb
@@ -1,4 +1,4 @@
-<a href="/listings/<%= @bid.listing.id %>/bids">Back to Bids</a>
+<a href="/listings/<%= @bid.listing.id %>">Back to Listing</a>
 <br><br>
 <h1><%= @bid.listing.title %></h1>
 <br>
