--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <h1> Login </h1>
-<br>
+<a href="/signup"><button>Sign Up</button></a>
+<br><br>
 <p> <%= @error %> </p>
-
 <form action='/login' method="post">
     <label> Username </label>
     <input type=text name="username" />
