--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,10 +1,12 @@
 <h1> Signup </h1>
-<br><br>
+<a href="/login"><button>Back to Login</button></a>
+<br>
 <% if @error %>
    <% @error.each do |e| %>
-      <h1> Errors: <%=  e %> </h1>
+      <h1> Error: <%=  e %> </h1>
    <%end %>
 <%end %>
+<br>
 <form action='/signup' method="post">
     <label> Username </label>
     <input type=text name="username" />
